  OpenFlow device pointer. For the latter, there's the optional second
  parameter of a device container that will be configured as switch ports.

- New OFSwitch13Device::GetDpId method as an alias for the GetDatapathId
  method.

- New OFSwitch13Device::GetDatapathStruct and OFSwitch13Port::GetPortStruct
  methods returning a pointer to the ofsoftswitch13 library structures.

- Renaming OFSwitch13Device attributes and trace sources to better reflect what
  they really represent: PipelineCapacity attribute was renamed to CpuCapacity,
  PipelineLoad traced value was renamed to CpuLoad, and LoadDrop trace source
  was renamed to OverloadDrop. The methods GetPipelineLoad and
  GetPipelineCapacity were also renamed to GetCpuLoad and GetCpuCapacity. These
  changes also reflects on the OFSwitch13StatsCalculator: GetEwmaPipelineLoad
  and GetAvgPipelineUsage were renamed to GetEwmaCpuLoad and GetAvgCpuUsage.

- Updating OFSwitch13Device::Get* methods for improved datapath stats. The
  GetFlowEntries, GetGroupEntries, and GetMeterEntries methods were replaced by
  GetFlowTableEntries, GetGroupTableEntries, and GetMeterTableEntries. The
  following new methods were included: GetDatapathTimeout, GetFlowTableUsage,
  GetGroupTableUsage, GetMeterTableUsage, GetNControllers, GetBufferEntries,
  GetBufferSize. The BufferUsage traced value was removed, but the method with
  the same can be used to get this value on demand.

- Improving OFSwitch13StatsCalculator with more statistics. It can now dump
  individual flow table stats. This is an optional feature (disabled by
  default), that can be enabled by the FlowTableDetails attribute.

- Renaming OFSwitch13StatsCalculator column names in first row, removing any
  special character from them.

- This version is compatible with ofsoftswitch13 library release v3.3.x and
  ns-3 versions 3.28 or later (including patches). There is no backward
  compatibility with older ns-3 versions.


Release 3.3.0 (Sep 29, 2018)